@@ -43,16 +43,8 @@ test -x "$DAEMON" || exit 0
 
 set -e
 
-if [ -f /etc/sysconfig/sipwitch ] ; then
-    DEFAULT="/etc/sysconfig/sipwitch"
-    . /etc/sysconfig/sipwitch
-elif [ -f /etc/default/sipwitch ] ; then
-    . /etc/default/sipwitch
-elif [ -f /etc/conf.d/sipwitch ] ; then
-    . /etc/conf.d/sipwitch
-elif [ -f /etc/site-start.d/sipwitch ] ; then
-    . /etc/site-start.d/sipwitch
-fi
+if [ -f /etc/default/sipwitch ] ; then
+    . /etc/default/sipwitch ; fi
 
 if [ ! -z "$PLUGINS" ] ; then
     export PLUGINS
