@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=forking
-EnvironmentFile=/etc/sysconfig/sipwitch
+EnvironmentFile=/etc/default/sipwitch
 ExecStartPre=-/bin/rm -f $FIFO
 ExecStart=$DAEMON $OPTIONS
 ExecStop=echo "down" ]$FIFO
